Phuc-done quan ly thanh vien, chua paging, chua sort

--- a/src/main/resources/page_name.properties
+++ b/src/main/resources/page_name.properties
@@ -1,5 +1,6 @@
 KhoaHoc = Khoá Học
 ThanhVien = Thành Viên
+ThanhVienDeleted = Danh Sách Đã Xóa
 Home = Trang Chủ
 ChoDuyet = Chờ Duyệt
 ThongBaoVaDeadline = Thông Báo Và Deadline
