--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.javatech</groupId>
-  <artifactId>TraineeManager</artifactId>
-  <version>v1</version>
-  <packaging>war</packaging>
-<properties>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.javatech</groupId>
+	<artifactId>TraineeManager</artifactId>
+	<version>v1</version>
+	<packaging>war</packaging>
+	<properties>
 		<jsp.api.version>2.0</jsp.api.version>
 		<servlet.api.version>3.1.0</servlet.api.version>
 		<jstl.version>1.2</jstl.version>
