--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 driverName = com.mysql.jdbc.Driver
 url = jdbc:mysql://localhost:3306/traineemanager
 user = root
-password = 98999888
+password = 1234
